--- a/styles/style.css
+++ b/styles/style.css
@@ -3,15 +3,16 @@
     background-image: url(../resources/Banner\ Image.png);
     width: 1320px;
     height: 600px;
-   
 }
 
 .greeting-container{
     text-align: center;
     width: 632px;
     height: 246px;
-    margin-left: 484px;
-    margin-top: 227px;
+    align-items: center;
+    margin-top: -60px ;
+    padding-top: 130px;
+    padding-left: 300px;
     
 }
 
@@ -19,6 +20,7 @@
     color: #ffffff;
     font-size: 32px;
     font-weight: 400;
+    margin-bottom: -60px;
 }
 
 .greeting-second-title{
